# hq_components

./: .gitmodules
backend/: CMakeLists.txt  cmd_client.c  cmd_client.h  cmd_client_req.c  cmd_server.c  cmd_server.h  parameters.c  parameters.h  parse_cmd.c  parse_cmd.h  wifidrv.c  wifidrv.h
backend/test/: CMakeLists.txt  proto_test.c
drv/: CMakeLists.txt  battery.c  battery.h  but.c  but.h  buzzer.c  buzzer.h  dev_config.c  dev_config.h  error_code.c  error_code.h  fast_add.c  fast_add.h  keepalive.c  keepalive.h  led.c  led.h  measure.c  measure.h  ota_drv.c  ota_drv.h  pcf8574.c  pcf8574.h  power_on.c  power_on.h  pwm_drv.c  pwm_drv.h  ringBuff.c  ringBuff.h  sleep.c  sleep_e.h  ultrasonar.c  ultrasonar.h  water_flow_sensor.c  water_flow_sensor.h
mongoose_drv/: CMakeLists.txt  http_parameters_client.c  http_parameters_client.h  http_server.c  http_server.h  mongoose_drv.c  mongoose_drv.h  net.c  net.h  parameters_api.c  parameters_api.h  wifi.c
oled/: CMakeLists.txt
oled/src/ssd1306_hal/esp/: platform.c
oled_ui/: CMakeLists.txt  menu_drv.c  menu_drv.h  oled.c  oled.h  oled_fonts.c  oled_fonts_mar.c  oled_glcd.h
